# django-react-launchpad

./: .gitignore  README.md  pyproject.toml
backend/backend/: settings.py  urls.py
backend/myapp/: views.py
frontend/: package-lock.json  package.json  webpack.config.js
