[tool.poetry]
name = "django-react-launchpad"
version = "0.1.0"
description = "Boilerplate starter code for your next django-react application"
authors = ["Subham Singh"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
